--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
       },
       "devDependencies": {
             "@types/node": "^20.10.0",
+            "@types/react": "^19.2.8",
+            "@types/react-dom": "^19.2.3",
             "@vitejs/plugin-react-swc": "^3.10.2",
             "gh-pages": "^6.3.0",
             "vite": "6.3.5"
@@ -61,6 +63,5 @@
             "build": "vite build",
             "predeploy": "npm run build",
             "deploy": "gh-pages -d build"
-                  }
-
+      }
 }
